# EDF_toolbox

./: .gitignore  CITATION.cff  EDF_join.m  README.md  apply_channel_derivations.m  batch_convert_EDF.m  bench_convert_modes.m  compare_compression.sh  compare_modes.sh  compare_rust_vs_matlab.sh  compile_edf_mex.m  convert_EDF.m  diag_edf.sh  header_gui.m  profile_convert.m  read_EDF.m  read_EDF_mex.c  read_EDF_mex.mexa64  read_EDF_mex.mexmaca64  write_EDF.m  write_EDF_mex.c  write_EDF_mex.mexmaca64
docs/: api.rst  conf.py  index.md
docs/_static/: prerau.css
docs/api/: EDF_join.rst  batch_convert_EDF.rst  convert_EDF.rst  header_gui.rst  read_EDF.rst  write_EDF.rst
rust/: Cargo.toml  build.rs
rust/src/: edf.rs  main.rs  resample.rs
zlib/: gzguts.h
zstd/: README.md
