[package]
name = "convert_edf_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "convert_edf"
path = "src/main.rs"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
zstd = { version = "0.13", features = ["zstdmt"] }
rayon = "1"
rubato = "0.16"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
